--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -1,7 +1,7 @@
 /*-----------------------------RESPONSIVENESS*/
 @media only screen and (max-width: 767px) {
   /*landing*/
-  body #description { font-size: 5.5vw; width: 100%; margin-bottom: 26vw; }
+  body #description { font-size: 5.5vw; width: 100%; margin-bottom: 30vw !important; }
   body #color-block { top: 57vw; left: 12vw; width: 76%; height: 8vw; }
   body #white-block { top: 57vw; left: 12vw; width: 76%; height: 8vw; }
   body #working-graphic { display: none; }
@@ -25,7 +25,6 @@
 /*-----------------------------INTRODUCTION BODY*/
 #description {
   font-size: 3vw;
-  margin-bottom: 4vw;
   font-weight: 500;
   transition: all 0.5s ease;
   width: 38%;
@@ -35,7 +34,6 @@
 #description-2 {
   font-size: 1.8vw;
   transition: all 0.5s ease;
-  margin-bottom: 15vw;
   width: 38%;
   line-height: 120%;
   z-index: 10;
@@ -43,7 +41,7 @@
 
 #white-block {
   position: absolute;
-  top: 14vw;
+  top: 12vw;
   right: 12vw;
   width: 45%;
   height: 25vw;
@@ -53,7 +51,7 @@
 
 #color-block {
   position: absolute;
-  top: 14vw;
+  top: 12vw;
   right: 12vw;
   width: 45%;
   height: 25vw;
@@ -93,7 +91,7 @@
 
 #working-graphic {
   position: absolute;
-  top: 11vw;
+  top: 9vw;
   right: -1vw;
   background-image: url("../assets/images/working-graphic.png");
   background-size: contain;
