--- a/css/workStyle.css
+++ b/css/workStyle.css
@@ -36,7 +36,7 @@
 
   body .prototype-container { grid-template-columns: 100%; }
   body .prototype-container div { margin: 0 0 12vw 0; }
-  body .prototype-container .prototypes { height: 100vw; }
+  body .mobile-hidden { display: none; }
 } 
 
 #designco-banner { 
