--- a/css/404.css
+++ b/css/404.css
@@ -1,9 +1,10 @@
 @media only screen and (max-width: 767px) {
   body #white-block, body #color-block {
-    top: 42vw;
+    top: 12vw;
   }
 
   body section[id=description-2] {
     margin-top: 18vw;
+    margin-bottom: 20vw !important;
   }
 }
