--- a/css/workStyle.css
+++ b/css/workStyle.css
@@ -110,8 +110,8 @@
 
 .logo { width: 30% !important; }
 
-.drop-shadow-half { box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
-.drop-shadow-full { box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 40px 0 rgba(0, 0, 0, 0.19); }
+.drop-shadow-half { box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.01); border-radius: 10px; }
+.drop-shadow-full { box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 40px 0 rgba(0, 0, 0, 0.01); border-radius: 10px; }
 
 .prototypes {
   border: none;
