--- a/css/workStyle.css
+++ b/css/workStyle.css
@@ -42,27 +42,11 @@
   body .logo { width: 50% !important; display: block; margin: auto; }
 } 
 
-#designco-banner { 
-  background-color: #999;
-  height: 40vw;
-  background-image: url('../assets/designco/designco-banner.jpg');
-  background-size: cover;
-  background-position: center;
-}
-
-#photography-banner {
-  background-color: #999;
-  height: 40vw;
-  background-image: url('../assets/photography/banner.png');
-  background-size: cover;
-  background-position: center;
-}
-
-#caida-banner { background-color: #BBE8E0; /*background-image: url('../assets/caida-banner.jpg'); background-size: cover;*/ }
+#designco-banner { background-image: url('../assets/designco/designco-banner.jpg'); }
+#photography-banner { background-image: url('../assets/photography/banner.png'); }
+#caida-banner { background-image: url('../assets/caida/banner.png'); }
 #grandama-banner { background-color: #F3D1A6; /*background-image: url('../assets/grandama-banner.jpg'); background-size: cover;*/ }
-#zilter-banner { background-color: #A5D6A7; /*background-image: url('../assets/zilter-banner.jpg'); background-size: cover;*/ }
-#quickly-banner { background-color: #FFF279; /*background-image: url('../assets/quickly-banner.jpg'); background-size: cover;*/ }
-#extras-banner { background-color: #DCDCDC; }
+#more-banner { background-color: #DCDCDC; }
 
 #link { transition: all 0.5s ease; }
 
