--- a/css/style.css
+++ b/css/style.css
@@ -171,7 +171,7 @@ html, body {
   width: 100%;
   height: 100%;
   pointer-events: none;
-  opacity: .03;
+  opacity: .02;
 }
 
 /* ---------------------------------------------- Header */
@@ -363,12 +363,11 @@ input:checked + .slider:before {
   width: fit-content;
   /* background: linear-gradient(to right, black 50%, white 50%); */
   background: linear-gradient(to right, white 50%, #171717 50%);
-  background-size: 260% 170%;
+  background-size: 200% 170%;
   background-position: right bottom;
   transition: .5s;
   padding: 0.2rem;
   line-height: initial;
-  /* height: 1.5rem; */
 }
 .work-item div h3:hover {
   cursor: pointer;
@@ -381,7 +380,6 @@ input:checked + .slider:before {
 }
 
 #about-tab {
-  /* display: grid; */
   grid-template-columns: 50% 50%;
   grid-template-rows: 33rem;
   transition: .6s;
@@ -413,7 +411,7 @@ input:checked + .slider:before {
 #footer {
   position: relative;
   top: 80rem;
-  margin-bottom: 5rem;
+  padding-bottom: 5rem;
   z-index: -1;
 }
 
