--- a/css/style.css
+++ b/css/style.css
@@ -47,11 +47,22 @@ table {
 /* Fonts */
 @font-face {
   font-family: "Suisse Int'l"; 
+  src: url("../assets/fonts/Suisse\ BP\ Int\'l\ Thin.eot"); 
+  src: url("../assets/fonts/Suisse\ BP\ Int\'l\ Thin.eot?#iefix") format("embedded-opentype"), 
+  url("../assets/fonts/Suisse\ BP\ Int\'l\ Thin.woff2") format("woff2"),
+  url("../assets/fonts/Suisse\ BP\ Int\'l\ Thin.woff") format("woff"),
+  url("../assets/fonts/Suisse\ BP\ Int\'l\ Thin.ttf") format("truetype"),
+  url("../assets/fonts/Suisse\ BP\ Int\'l\ Thin.otf") format("opentype"); 
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: "Suisse Int'l"; 
   src: url("//db.onlinewebfonts.com/t/13ab13418f633c1b0516fed6e30bedbc.eot"); 
   src: url("//db.onlinewebfonts.com/t/13ab13418f633c1b0516fed6e30bedbc.eot?#iefix") format("embedded-opentype"), 
   url("//db.onlinewebfonts.com/t/13ab13418f633c1b0516fed6e30bedbc.svg#Suisse Int'l") format("svg"),
   url("../assets/fonts/Suisse\ BP\ Int\'l\ Regular.woff"); 
-  font-weight: normal;
+  font-weight: 500;
 }
 
 @font-face {
@@ -60,7 +71,7 @@ table {
   src: url("//db.onlinewebfonts.com/t/501e03d4c0303f394033bcaf435f4b3e.eot?#iefix") format("embedded-opentype"), 
   url("//db.onlinewebfonts.com/t/501e03d4c0303f394033bcaf435f4b3e.svg#Suisse Int'l Medium") format("svg"),
   url("../assets/fonts/Suisse\ BP\ Int\'l\ Medium.woff"); 
-  font-weight: 500;
+  font-weight: 600;
 }
 
 @font-face {
@@ -69,7 +80,7 @@ table {
   src: url("//db.onlinewebfonts.com/t/8e52b05f6b6c1a65b0c49c8286f690b2.eot?#iefix") format("embedded-opentype"), 
   url("//db.onlinewebfonts.com/t/8e52b05f6b6c1a65b0c49c8286f690b2.svg#Suisse Int'l Bold") format("svg"),
   url("../assets/fonts/Suisse\ BP\ Int\'l\ Bold.woff");
-  font-weight: bold;
+  font-weight: 700;
 }
 
 @font-face {
@@ -84,20 +95,27 @@ table {
   url("../assets/fonts/Suisse\ Mono\ Regular.woff2");
 }
 
+@font-face {
+  font-family: "Suisse Works";
+  src: url("../assets/fonts/Suisse\ Works\ Medium.otf") format("opentype");
+  font-weight: 600;
+}
+
+@media only screen and (max-width: 500px) {
+  #content #contact > div { margin-right: 1rem; }
+  #content #contact a:not(:first-child):not(:last-child) { margin-right: 1rem; }
+  #content #contact .external { width: 0.5rem; height: 0.5rem; }
+  #contact a { font-size: 0.8rem; }
+}
 
 @media only screen and (max-width: 767px) {
   /* Header */
-  #header { width: fit-content; margin-bottom: 15vw; }
-  #headline-text h1 { max-width: 50px; }
-  #darkmode-txt { display: none; }
-  body #darkmode span { font-size: 2vw; }
-  body .switch { position: absolute; top: 5rem; right: calc(25% / 2); width: 6.3vw; height: 3.6vw; }
-  body .slider:before { height: 3vw; width: 3vw; left: 0.3vw; bottom: 0.3vw; }
-  body input:checked + .slider:before { -webkit-transform: translateX(2.65vw); -ms-transform: translateX(2.65vw); transform: translateX(2.65vw); }
+  #header { margin-bottom: 3rem; }
+  #headline { margin-bottom: 2rem; }
+  #content #headline-text { font-size: 2rem; }
 
   /* Landing */
-  #content #intro { display: none; }
-  #intro #message { width: 90%; margin-bottom: 4vw; }
+  #intro #message { margin-bottom: 3rem; width: 100%; }
 
   /* Main */
   #content #work-tab { grid-template-columns: 100%; }
@@ -105,9 +123,8 @@ table {
   #work-tab div .work-item { grid-template-columns: 10% 90%; grid-template-rows: 12rem; }
   #work-tab div .work-item div { width: 100%; }
   #work-tab div .work-item div h3 { font-size: 1.3rem; padding: 0.17rem; height: initial; }
-  #content #about-tab { grid-template-columns: 100%; grid-template-rows: 50vw; }
-  #content #about-tab div:not(:last-child) { padding: 0; order: 2; }
-  #content #about-tab #portrait { background-image: url("../assets/images/portrait-full.jpg"); border-radius: 5px; order: 1; height: 40vw; }
+  #content #about-tab { grid-template-columns: 100%; grid-template-rows: 70vw; }
+  #content #about-tab #portrait { border-radius: 3px; height: 60vw; margin-right: 0; }
   #work-tab .work-item .numerate { font-size: 0.9rem; }
   #content #work-tab .work-item div { width: 100%; }
   #work-tab > div:last-child { display: none; }
@@ -120,16 +137,14 @@ table {
   #work-pages .work-container .details { flex-direction: column; }
   #work-pages .work-container .details div { width: 100%; padding: 0; margin-bottom: 1.5rem; }
 
-  /* Footer */
-  body #footer { top: 100rem; }
-  body #contact { font-size: 1rem; font-weight: 500; display: flex; justify-content: space-between; float: none; max-width: 350px; margin: auto; }
+  /* Contact */
+  body #contact { font-size: 1rem; font-weight: 500; display: flex; justify-content: space-between; float: none; width: 100%; margin: auto; }
   body #contact a:not(:last-child) { margin: 0; }
-  body #copyright { font-size: 0.7rem; text-transform: uppercase; text-align: center; margin-top: 4vw; float: none; }
 
   body .spacer6 { margin-bottom: 20vw; }
   body .spacer5 { margin-bottom: 15vw; }
   body .spacer4 { margin-bottom: 10vw; }
-  body .spacer3 { margin-bottom: 8vw; }
+  body .spacer3 { margin-bottom: 3rem; }
   body .spacer2 { margin-bottom: 6vw; }
   body .spacer1 { margin-bottom: 3vw; }
 }
@@ -156,11 +171,29 @@ table {
 .margin-top-none { margin-top: 0 !important; }
 .mono { font-family: "Suisse Mono"; }
 
+/* Variables --------------------------------------------------------------- */
+:root {
+  --text: #FFFDE7;
+  --bg: #3C405A;
+}
+
+
 html, body {
   font-family: "Suisse Int'l", Roboto, sans-serif;
   font-size: 1rem;
+  font-weight: 500;
   transition: 0.3s;
   line-height: 160%;
+  background-color: var(--bg, indigo);
+  color: var(--text, white);
+  scroll-behavior: smooth;
+  opacity: 1;
+  transition: 0.7s opacity;
+}
+
+body.fade {
+  opacity: 0;
+  transition: none;
 }
 
 .noise {
@@ -172,9 +205,10 @@ html, body {
   height: 100%;
   pointer-events: none;
   opacity: .02;
+  background-color: white;
 }
 
-/* ---------------------------------------------- Header */
+/* Header ------------------------------------------------------------------ */
 #headline {
   float: left;
 }
@@ -182,113 +216,35 @@ html, body {
   text-decoration: none;
 }
 #headline-text {
+  font-family: "Suisse Works";
   display: inline;
   font-size: 1rem;
-  font-weight: 500;
-  text-transform: uppercase;
+  font-weight: 600;
 }
 
-#darkmode {
-  transition: all 0.5s ease;
-  line-height: 2vw;
-  margin-right: 0;
-  display: none;
-  float: right;
-}
-#darkmode-txt {
-  margin-right: 1vw;
-  transition: all 0.5s ease;
-  line-height: 2vw;
-}
-label {
-  vertical-align: sub;
-  line-height: 1.85vw;
-}
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 2rem;
-  height: 1rem;
-}
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 0.8rem;
-  width: 0.8rem;
-  left: 0.11rem;
-  bottom: 0.11rem;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-input:checked + .slider {
-  background-color: #66BB6A;
-}
-input:focus + .slider {
-  box-shadow: 0 0 0.1vw #66BB6A;
-}
-input:checked + .slider:before {
-  -webkit-transform: translateX(0.95rem);
-  -ms-transform: translateX(0.95rem);
-  transform: translateX(0.95rem);
-}
-.slider.round {
-  border-radius: 17px;
-}
-.slider.round:before {
-  border-radius: 50%;
-}
-
-/* ---------------------------------------------- Content */
+/* Content ----------------------------------------------------------------- */
 #content {
   margin: 5rem auto;
   width: 75%;
   max-width: 1000px;
 }
 
-.text-bubble {
-  box-sizing: border-box;
-  padding: 1rem 2rem;
-  border-radius: 40px;
-}
-
 #message {
-  background-color: #F7F7F8;
-  width: 55%;
+  font-size: 2rem;
+  width: 70%;
   margin-bottom: 0.3rem;
+  line-height: 120%;
 }
-
 #message a {
-  color: inherit;
+  color: var(--text, white);
+  font-size: 1.8rem;
+  text-decoration: none;
 }
-
-#reply {
-  background-color: #2593F8;
-  color: white;
-  float: right;
-  padding: 0.75rem 1.5rem;
+#me {
+  text-decoration: underline;
 }
-
-#read {
-  color: #696969;
-  float: right;
-  font-size: 0.8rem;
+#me:hover {
+  cursor: pointer;
 }
 
 #tab {
@@ -309,7 +265,7 @@ input:checked + .slider:before {
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: black;
+  background-color: var(--text, white);
   visibility: hidden;
   transition: .3s;
 }
@@ -321,7 +277,6 @@ input:checked + .slider:before {
   color: inherit;
 }
 #tab h2.dark:hover::before, #tab h2.dark::before {
-  /* background-color: black; */
   background-color: white;
 }
 #tab h2:hover {
@@ -361,8 +316,7 @@ input:checked + .slider:before {
   font-weight: 500;
   margin-bottom: 2vw;
   width: fit-content;
-  /* background: linear-gradient(to right, black 50%, white 50%); */
-  background: linear-gradient(to right, white 50%, #171717 50%);
+  background: linear-gradient(to right, var(--text) 50%, var(--bg) 50%);
   background-size: 200% 170%;
   background-position: right bottom;
   transition: .5s;
@@ -372,8 +326,7 @@ input:checked + .slider:before {
 .work-item div h3:hover {
   cursor: pointer;
   background-position: left bottom;
-  /* color: white; */
-  color: black;
+  color: var(--bg);
 }
 .numerate {
   font-family: "Suisse Mono";
@@ -386,7 +339,7 @@ input:checked + .slider:before {
   display: none;
 }
 #about-tab div:not(:last-child) {
-  padding-right: 4vw;
+  margin-right: 4vw;
 }
 #about-tab h2 {
   font-size: 1.2rem;
@@ -405,55 +358,52 @@ input:checked + .slider:before {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  border-radius: 10px;
+  border-radius: 5px;
 }
 
-#footer {
-  position: relative;
-  top: 80rem;
-  padding-bottom: 5rem;
-  z-index: -1;
-}
 
+/* Contact ----------------------------------------------------------------- */
 #contact {
-  float: left;
+  float: right;
   transition: 0.3s;
 }
-
 #contact a {
   text-decoration: none;
+  color: var(--text, white);
+  transition: 0.3s;
 }
-
 #contact a:hover {
+  opacity: 0.7;
+  transition: 0.3s;
+}
+#contact .external {
+  width: 0.75rem;
+  height: 0.75rem;
+  display: inline-block;
+  background-image: url("../assets/images/external.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+#contact > div {
+  margin-right: 2rem;
+  display: inline-block;
+}
+#contact a:not(:first-child):not(:last-child) {
+  margin-right: 2rem;
+}
+#email:hover {
   cursor: pointer;
 }
 
-#contact a:not(:last-child) {
-  margin-right: 2rem;
-}
-
-#copyright {
-  float: right;
-  text-transform: uppercase;
-  font-size: 0.9rem;
-}
-
-
-main, article, #content {
-  background-color: inherit;
-}
-
-#work-pages > div {
-  background-color: white;
-}
-
+/* Work -------------------------------------------------------------------- */
 .work-container {
   width: 100vw;
   height: 100vh;
   position: fixed;
   top: 0;
   left: 0;
-  background-color: inherit;
+  background-color: var(--bg, indigo);
   transform: translateY(100vh);
   transition: .6s;
   overflow: scroll;
@@ -503,20 +453,20 @@ main, article, #content {
 .details {
   display: flex;
   align-items: flex-start;
-  justify-content: space-between;
+  justify-content: space-evenly;
   font-family: "Suisse Mono";
   font-size: 0.8rem;
-  background-color: #F7F7F8;
+  background-color: #4E5269;
   box-sizing: border-box;
-  padding: 1.5rem;
-  border-radius: 10px;
+  padding: 1.5rem 0;
+  border-radius: 5px;
   margin-bottom: 4vw;
 }
 
 .details div {
-  width: 25%;
+  width: fit-content;
+  max-width: 25%;
   box-sizing: border-box;
-  padding-right: 1rem;
 }
 
 .details div h5 {
